More testing and exploration.

--- a/AnalyseRoverRecordings.ipynb
+++ b/AnalyseRoverRecordings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
     "\n",
     "\n",
     "# read the data and drop information regarding z axis, time frame and vicon tracking labels\n",
-    "data = pd.read_csv('../rover/data/recordingTest8minutes.csv')\n",
+    "data = pd.read_csv('./recordingTest8minutes.csv')\n",
     "data.columns = ['Time frame', 'RobotName', 'XCoord', 'YCoord', 'ZCoord', 'XOrient', 'YOrient', 'ZOrient', 'LMotor', 'RMotor']\n",
     "data_reduced = data.drop(['Time frame', 'RobotName', 'ZCoord', 'ZOrient'], 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "(71743, 6)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "False"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "Text(0.5, 1.0, 'RMotor')"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     },
