Latest updates with some clean up.

--- a/AnalyseRoverRecordings.ipynb
+++ b/AnalyseRoverRecordings.ipynb
@@ -387,37 +387,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 156,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       XCoord    YCoord   XOrient   YOrient  LMotor  RMotor\n",
-      "250  0.515781  0.452303  0.494227  0.530181    0.50     0.5\n",
-      "251  0.515776  0.452306  0.494224  0.530145    0.50     0.5\n",
-      "252  0.515775  0.452304  0.494227  0.530193    0.50     0.5\n",
-      "253  0.515775  0.452304  0.494250  0.530163    0.65     0.5\n",
-      "254  0.515775  0.452305  0.494236  0.530089    0.65     0.5\n",
-      "       XCoord    YCoord   XOrient   YOrient  LMotor  RMotor\n",
-      "250  0.515781  0.452303  0.494227  0.530181     0.5     0.5\n",
-      "260  0.515750  0.452345  0.494429  0.530083     1.0     0.5\n",
-      "270  0.517672  0.457437  0.492171  0.542044     1.0     0.5\n",
-      "280  0.525007  0.466882  0.494916  0.546299     1.0     0.5\n",
-      "290  0.537307  0.478693  0.502117  0.538545     0.5     0.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save data to new csv file, without index\n",
     "# data_reduced: data without z coordinate and orientation\n",
     "# data_normalised: data_reduced min-max normalised\n",
     "# data_normalised_subsampled: data_normalised subsampled\n",
-    "print(data_normalised.head())\n",
-    "print(data_normalised_subsampled.head())\n",
     "\n",
-    "data_normalised_subsampled.to_csv('Pre-processed_data.csv', index=False)"
+    "data_normalised.to_csv('Pre-processed_data.csv', index=False)\n",
+    "data_normalised_subsampled.to_csv('Pre-processed_data_subsampled.csv', index=False)"
    ]
   },
   {
